# virtual_rsu

./: CMakeLists.txt  async_subscribe.cpp  readme.md  rsu.sh  test.txt  traffic_light.json  traffic_light_status.json  virtual_light
src/: async_subscribe.cpp  callback.cpp  callback.h  light_message.cpp  light_message.h  main.cpp
